Refactor: 검증 로직 통일